navbar z-index test fixed

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ body {
 }
 
 #navbar {
-      #navbar {
   background-color: #333;
   position: fixed;
   top: 0;
